# mol-splat

./: .gitignore  README.md  pyproject.toml
colab-notebooks/: nerf_dataset_training_demo.ipynb
data/: download_example_data.sh
mc3gs/: __init__.py
mc3gs/chemistry/: __init__.py  biomolecules.py  featurise.py  rdkit_templates.py  typing.py
mc3gs/cli/: __init__.py  mc3gs_export.py  mc3gs_train.py
mc3gs/config/: __init__.py  defaults.py  schema.py
mc3gs/data/: __init__.py  cameras.py  colmap.py  images.py
mc3gs/export/: __init__.py  export_blender.py  export_gaussians.py  export_threejs.py
mc3gs/model/: __init__.py  constraints.py  molecule_instance.py  scene.py  templates.py
mc3gs/render/: __init__.py  backend.py  projection.py  sh.py  splat_renderer.py
mc3gs/train/: __init__.py  checkpoints.py  losses.py  optim.py  trainer.py
notebooks/: color_fitting_tests.py  molecule_rendering_demo.py  nerf_dataset_training_demo.py  water_training_demo.py
tests/: __init__.py  test_losses.py  test_model.py  test_projection.py  test_sh.py
